--- a/adotar/templates/listar_pets.html
+++ b/adotar/templates/listar_pets.html
@@ -88,7 +88,7 @@
                                 {% for pet in pets%}
                                 <tr class="tabela-linha">
                                     <td width="20%">
-                                        <a href=""
+                                        <a href="{% url 'ver_pet' pet.id %}"
                                             ><img
                                                 width="40%"
                                                 src="{{pet.foto.url}}"
